Commit al master del index.html en su version mas reciente

--- a/desarrollo_web/index.html
+++ b/desarrollo_web/index.html
@@ -27,12 +27,15 @@
                 </nav>
             </div>
         </header>
-        <section class="hero">
-            <h1>
-                Hola! <br/> <strong>Bienvenido</strong> a mi sitio web
-            </h1>
-            <img src="img/ninoloco.jpg" width="500" alt="No existe nino loco">
-        </section>
+        <div id="container">
+            <section class="hero">
+                <h1>
+                    Hola! <br/> <strong>Bienvenido</strong> a mi sitio web
+                </h1>
+                <img src="img/ninoloco.jpg" width="500" alt="No existe nino loco">
+            </section>
+        </div>
+ 
         <section id="portfolio" class="portfolio">
             <h2>Portafolio (Proyectos Destacados)</h2>
             <article class="project">
