Se agrega la palabra cabecera en el branch cabecera

--- a/desarrollo_web/index.html
+++ b/desarrollo_web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        Cabecera
+        <div id="cabecera"></div>
         <meta charset="UTF-8">
         <title>Oscar Martinez</title>
         <link rel="icon" type="image/png" href="img\helado.png"/>
