Finalizada la cabecera con dise;o azul

--- a/desarrollo_web/index.html
+++ b/desarrollo_web/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        Cabecera
         <div id="cabecera"></div>
         <meta charset="UTF-8">
         <title>Oscar Martinez</title>
@@ -10,9 +9,9 @@
     </head>
     <body>
         <header class="header">
-            <div>
+            <div id="container">
                 <figure class="logo">
-                    <img src="img/oscarin.jpg" alt="Logo de Oscar Mtz"/>
+                    <img src="img/oscarin.jpg" alt="Logo de Oscar Mtz" width="300"/>
                 </figure>
                 <nav class="menu">
                     <ol>
@@ -29,7 +28,7 @@
                 </nav>
             </div>
         </header>
-        <div id="container">
+        <div>
             <section class="hero">
                 <h1>
                     Hola! <br/> <strong>Bienvenido</strong> a mi sitio web
