Mi nombre completo

--- a/desarrollo_web/index.html
+++ b/desarrollo_web/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Oscar Martinez</title>
+        <title>Oscar Martinez Lujano</title>
         <link rel="icon" type="image/png" href="img\helado.png"/>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
